Ignore IDE folders

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ app/scraped_data.json
 app/crawls/custom/*
 !app/crawls/custom/_example.py
 !app/crawls/custom/README.md
+
+# Ignore folders created by JetBrains IDEs.
+.idea/*
