Fix read write permissions

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .env.local
 app/downloaded
-app/scraped_data.json
+kopio.hel.fi
+result
 app/crawls/custom/*
 !app/crawls/custom/_example.py
 !app/crawls/custom/README.md
